syntax = "proto3";

option go_package = "./proto/v1";

message MemoryInfo {
  uint64 total = 1;
  uint64 used = 2;
  uint64 free = 3;
  double used_percent = 4;
}

message DiskInfo {
  uint64 total = 1;
  uint64 used = 2;
  uint64 free = 3;
  double used_percent = 4;
}

message HeartbeatReq {
  string agent_token = 1;
  repeated double cpu_percent = 2;
  MemoryInfo memory_info = 3;
  DiskInfo disk_info = 4;
  map<string, string> worker_status = 5;
}

message HeartbeatResp {
  int64 timestamp = 1;
  string message = 2;
}
